# secure-kmean-clustering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SecureCluster.csv  accuracy.txt  copySourceToLinux.ps1  dist.txt  main.sln  nCluster.csv  s1-groundtruth-plot.xls  script_PSU.get  script_PSU_compr.get  unitTest.txt
Ivory-Runtime/: .gitignore  CMakeLists.txt  Ivory.sln  README.md  copySourceToLinux.ps1
Ivory-Runtime/SPDZ/: CopeOtExtDefines.h  CopeOtExtReceiver.cpp  CopeOtExtReceiver.h  CopeOtExtSender.cpp  CopeOtExtSender.h  SPDZ.vcxproj  SPDZ.vcxproj.filters
Ivory-Runtime/SPDZ/Math/: ZpField.cpp  ZpField.h
Ivory-Runtime/frontend/: frontend.vcxproj  main.cpp
Ivory-Runtime/ivory/: CMakeLists.txt  ivory.vcxproj  ivory.vcxproj.filters
Ivory-Runtime/ivory/Circuit/: BetaCircuit.cpp  BetaCircuit.h  Circuit.cpp  Circuit.h  CircuitLibrary.cpp  CircuitLibrary.h  Gate.h
Ivory-Runtime/ivory/Runtime/: Party.cpp  Party.h  Runtime.cpp  Runtime.h  sInt.cpp  sInt.h
Ivory-Runtime/ivory/Runtime/Public/: PublicInt.cpp  PublicInt.h
Ivory-Runtime/ivory/Runtime/ShGc/: ShGcInt.cpp  ShGcInt.h  ShGcRuntime.cpp  ShGcRuntime.h  utils.h
Ivory-Runtime/ivoryTestVS/: Circuit_Tests_VS.cpp  ClassicGarbledCircuit_Tests_VS.cpp  Cope_TestsVS.cpp  HalfGtGarbledCircuit_Tests_VS.cpp  ShGcRuntime_TestsVs.cpp  ZpNumber_TestVS.cpp  ivoryTestVS.vcxproj  ivoryTestVS.vcxproj.filters  stdafx.cpp
Ivory-Runtime/ivoryTests/: CMakeLists.txt  Circuit_Tests.cpp  Circuit_Tests.h  Common.cpp  Common.h  Cope_Tests.cpp  Cope_Tests.h  DebugCircuits.cpp  DebugCircuits.h  ShGcRuntime_tests.cpp  ShGcRuntime_tests.h  ZpNumber_Tests.cpp  ZpNumber_Tests.h  ivoryTests.vcxproj  ivoryTests.vcxproj.filters
Python accurracy/PythonApplication1/: PythonApplication1.py  PythonApplication1.sln  unitTest_sizes1.arff.txt
Python accurracy/PythonApplication_accuracy/: PythonApplication1.py  SecureCluster_sizes1.arff.txt  raw_sizes1.arff.txt  sizes1.arff.txt
PythonApplication1/: PythonApplication1.py  PythonApplication1.pyproj  unitTest.txt
Result/: SD_1022  benchmark.txt  dist.txt  lsun.txt  min - baseline.txt  min.txt  s1.txt  unitTest.txt
Tests/: Accuracy.h  BaseOT_Tests.cpp  CMakeLists.txt  DataShare.cpp  DataShare.h  NcoOT_Tests.cpp  OTOracleReceiver.cpp  OT_Tests.cpp  Tests.cpp  Tests.h  Tests.vcxproj.vcxproj  nOPRF_Tests.cpp  nOPRF_Tests.h  progCircuit.h
TestsVS/: TestsVS.cpp  TestsVS.vcxproj  nOPRF_TestsVS.cpp
color/: PythonApplication1.py
dataset/: LsunKmeans.txt  s1-groundtruth-plot.xls  s1c.txt
frontend/: CMakeLists.txt  frontend.vcxproj  main.cpp  util.cpp
graph presentation/: 3Cluster.csv  4Cluster.csv  PlainTextCluster.csv  s1-groundtruth-plot.xls
libCluster/: Accuracy.h  CMakeLists.txt  Common.cpp  Common.h  DataShare.cpp  DataShare.h  Tests.cpp  Tests.h  libCluster.vcxproj.vcxproj  progCircuit.h
libClustering/: secureKmeans.cpp
libOTe_config/: CMakeLists.txt
libOTe_config/libOTe/Base/: SimplestOT.h
